[gd_scene load_steps=8 format=3 uid="uid://b2loam5g5ekg5"]

[ext_resource type="Script" path="res://scripts/ui/country_button.gd" id="1_rn2iu"]
[ext_resource type="PackedScene" uid="uid://dv5h7wj8mri2l" path="res://scenes/ui/country_icon.tscn" id="2_a6sw4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g3dtd"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0.627451)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trc8c"]
bg_color = Color(0.6, 0.6, 0.6, 0.313726)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ljnnk"]
bg_color = Color(0.6, 0.6, 0.6, 0)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iaw8b"]
bg_color = Color(0.4, 0.4, 0.4, 0.501961)
anti_aliasing = false

[sub_resource type="Theme" id="Theme_x26e2"]
Button/styles/focus = SubResource("StyleBoxFlat_g3dtd")
Button/styles/hover = SubResource("StyleBoxFlat_trc8c")
Button/styles/normal = SubResource("StyleBoxFlat_ljnnk")
Button/styles/pressed = SubResource("StyleBoxFlat_iaw8b")

[node name="CountryButton" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_rn2iu")

[node name="CountryIcon" parent="." instance=ExtResource("2_a6sw4")]
unique_name_in_owner = true
layout_mode = 0
anchors_preset = 0
grow_horizontal = 1
grow_vertical = 1
mouse_filter = 1

[node name="Button" type="Button" parent="CountryIcon"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_x26e2")

[connection signal="pressed" from="CountryIcon/Button" to="." method="_on_button_pressed"]
